Fix out of bounds error thrown in is_frontier_cell due to the is_burnable_cell checks

--- a/org/pyretechnics.org
+++ b/org/pyretechnics.org
@@ -352,7 +352,7 @@ polymorphism over these two child classes.
 @cy.cclass
 class ISpaceTimeCube:
     @cy.cfunc
-    @cy.exceptval(check=False)
+    # @cy.exceptval(check=False)
     def get(self, t: pyidx, y: pyidx, x: pyidx) -> cy.float:
         pass
 #+end_src
@@ -518,7 +518,7 @@ class SpaceTimeCube(ISpaceTimeCube):
 
 
     @cy.ccall
-    @cy.exceptval(check=False)
+    # @cy.exceptval(check=False)
     @cy.boundscheck(True)
     def get(self, t: pyidx, y: pyidx, x: pyidx) -> cy.float:
         """
@@ -875,7 +875,7 @@ class LazySpaceTimeCube(ISpaceTimeCube):
 
 
     @cy.ccall
-    @cy.exceptval(check=False)
+    # @cy.exceptval(check=False)
     def get(self, t: pyidx, y: pyidx, x: pyidx) -> cy.float:
         """
         Return the scalar value at index (t,y,x) by translating these cube coordinates
@@ -6468,6 +6468,7 @@ def is_in_bounds(y: pyidx, x: pyidx, rows: pyidx, cols: pyidx) -> cy.bint:
     return (y >= 0) and (x >= 0) and (y < rows) and (x < cols)
 
 
+# FIXME: Memoize this function with a 2D (y,x) array cache
 @cy.cfunc
 @cy.exceptval(check=False)
 def is_burnable_cell(fuel_model_cube: ISpaceTimeCube, t: pyidx, y: pyidx, x: pyidx) -> cy.bint:
@@ -9443,6 +9444,8 @@ def opposite_phi_signs(phi_matrix: cy.float[:,::1], y1: pyidx, x1: pyidx, y2: py
 @cy.exceptval(check=False)
 def is_frontier_cell(phi_matrix     : cy.float[:,::1],
                      fuel_model_cube: ISpaceTimeCube,
+                     rows           : pyidx,
+                     cols           : pyidx,
                      t              : pyidx,
                      y              : pyidx,
                      x              : pyidx) -> cy.bint:
@@ -9453,16 +9456,24 @@ def is_frontier_cell(phi_matrix     : cy.float[:,::1],
     west_x : pyidx = x-1
     return ((
         # Check north
-        opposite_phi_signs(phi_matrix, y, x, north_y, x) and spot.is_burnable_cell(fuel_model_cube, t, north_y, x)
+        opposite_phi_signs(phi_matrix, y, x, north_y, x)
+        and spot.is_in_bounds(north_y, x, rows, cols)
+        and spot.is_burnable_cell(fuel_model_cube, t, north_y, x)
     ) or (
         # Check south
-        opposite_phi_signs(phi_matrix, y, x, south_y, x) and spot.is_burnable_cell(fuel_model_cube, t, south_y, x)
+        opposite_phi_signs(phi_matrix, y, x, south_y, x)
+        and spot.is_in_bounds(south_y, x, rows, cols)
+        and spot.is_burnable_cell(fuel_model_cube, t, south_y, x)
     ) or (
         # Check east
-        opposite_phi_signs(phi_matrix, y, x, y, east_x) and spot.is_burnable_cell(fuel_model_cube, t, y, east_x)
+        opposite_phi_signs(phi_matrix, y, x, y, east_x)
+        and spot.is_in_bounds(y, east_x, rows, cols)
+        and spot.is_burnable_cell(fuel_model_cube, t, y, east_x)
     ) or (
         # Check west
-        opposite_phi_signs(phi_matrix, y, x, y, west_x) and spot.is_burnable_cell(fuel_model_cube, t, y, west_x)
+        opposite_phi_signs(phi_matrix, y, x, y, west_x)
+        and spot.is_in_bounds(y, west_x, rows, cols)
+        and spot.is_burnable_cell(fuel_model_cube, t, y, west_x)
     )) and (
         # Is this cell burnable?
         spot.is_burnable_cell(fuel_model_cube, t, y, x)
@@ -9484,7 +9495,7 @@ def identify_all_frontier_cells(phi_matrix     : cy.float[:,::1],
     x             : pyidx
     for y in range(rows):
         for x in range(cols):
-            if is_frontier_cell(phi_matrix, fuel_model_cube, t, y, x):
+            if is_frontier_cell(phi_matrix, fuel_model_cube, rows, cols, t, y, x):
                 frontier_cells.add(encode_cell_index(y, x))
     return frontier_cells
 
@@ -10816,6 +10827,8 @@ def route_cell_to_diff(frontier_cells_old: set,
                        frontier_removals : set,
                        phi_matrix        : cy.float[:,::1],
                        fuel_model_cube   : ISpaceTimeCube,
+                       rows              : pyidx,
+                       cols              : pyidx,
                        t                 : pyidx,
                        y                 : pyidx,
                        x                 : pyidx) -> cy.void:
@@ -10824,13 +10837,14 @@ def route_cell_to_diff(frontier_cells_old: set,
     mutating the sets `frontier_additions` and `frontier_removals` accordingly.
     Idempotent.
     """
-    encoded_cell_index: object = encode_cell_index(y, x)
-    if is_frontier_cell(phi_matrix, fuel_model_cube, t, y, x):
-        if not (encoded_cell_index in frontier_cells_old):
-            frontier_additions.add(encoded_cell_index)
-    else:
-        if (encoded_cell_index in frontier_cells_old):
-            frontier_removals.add(encoded_cell_index)
+    if spot.is_in_bounds(y, x, rows, cols):
+        encoded_cell_index: object = encode_cell_index(y, x)
+        if is_frontier_cell(phi_matrix, fuel_model_cube, rows, cols, t, y, x):
+            if not (encoded_cell_index in frontier_cells_old):
+                frontier_additions.add(encoded_cell_index)
+        else:
+            if (encoded_cell_index in frontier_cells_old):
+                frontier_removals.add(encoded_cell_index)
 
 
 @cy.cfunc
@@ -10839,6 +10853,8 @@ def diff_frontier_cells(frontier_cells_old  : set,
                         spot_ignited_cells  : list[BurnedCellInfo],
                         phi_matrix          : cy.float[:,::1],
                         fuel_model_cube     : ISpaceTimeCube,
+                        rows                : pyidx,
+                        cols                : pyidx,
                         t                   : pyidx) -> tuple[set, set]:
     """
     Computes the bi-directional set difference between the old frontier cells and the new frontier cells,
@@ -10862,6 +10878,8 @@ def diff_frontier_cells(frontier_cells_old  : set,
                                frontier_removals,
                                phi_matrix,
                                fuel_model_cube,
+                               rows,
+                               cols,
                                t,
                                y,
                                x)
@@ -10870,6 +10888,8 @@ def diff_frontier_cells(frontier_cells_old  : set,
                                frontier_removals,
                                phi_matrix,
                                fuel_model_cube,
+                               rows,
+                               cols,
                                t,
                                y-1,
                                x)
@@ -10878,6 +10898,8 @@ def diff_frontier_cells(frontier_cells_old  : set,
                                frontier_removals,
                                phi_matrix,
                                fuel_model_cube,
+                               rows,
+                               cols,
                                t,
                                y+1,
                                x)
@@ -10886,6 +10908,8 @@ def diff_frontier_cells(frontier_cells_old  : set,
                                frontier_removals,
                                phi_matrix,
                                fuel_model_cube,
+                               rows,
+                               cols,
                                t,
                                y,
                                x-1)
@@ -10894,6 +10918,8 @@ def diff_frontier_cells(frontier_cells_old  : set,
                                frontier_removals,
                                phi_matrix,
                                fuel_model_cube,
+                               rows,
+                               cols,
                                t,
                                y,
                                x+1)
@@ -11000,6 +11026,8 @@ def spread_one_timestep(sim_state    : dict,
                                                                     spot_ignited_cells,
                                                                     phi_matrix,
                                                                     spread_inputs.fuel_model,
+                                                                    spread_inputs.rows,
+                                                                    spread_inputs.cols,
                                                                     int(stop_time // spread_inputs.band_duration))
     frontier_additions: set                   = frontier_diff[0]
     frontier_removals : set                   = frontier_diff[1]
@@ -14853,7 +14881,7 @@ cdef np.ndarray stretch_array(np.ndarray old_array, int new_length, float repeti
 cdef np.ndarray maybe_repeat_array(np.ndarray maybe_array, (pyidx, float) axis_repetitions)
 
 cdef class ISpaceTimeCube:
-    cdef float get(ISpaceTimeCube self, pyidx t, pyidx y, pyidx x) noexcept
+    cdef float get(ISpaceTimeCube self, pyidx t, pyidx y, pyidx x) # noexcept
 
 cdef class SpaceTimeCube(ISpaceTimeCube):
     cdef public int ndim
@@ -14865,7 +14893,7 @@ cdef class SpaceTimeCube(ISpaceTimeCube):
     cdef public float x_repetitions
     # NOTE: We use const (read-only MemoryView) so that Cython will accept read-only arrays, which is required for shared-memory parallelism.
     cdef public const float[:,:,::1] data
-    cpdef float get(SpaceTimeCube self, pyidx t, pyidx y, pyidx x) noexcept
+    cpdef float get(SpaceTimeCube self, pyidx t, pyidx y, pyidx x) # noexcept
     cpdef np.ndarray getTimeSeries(SpaceTimeCube self, object t_range, pyidx y, pyidx x)
     cpdef np.ndarray getSpatialPlane(SpaceTimeCube self, pyidx t, object y_range, object x_range)
     cpdef np.ndarray getSubcube(SpaceTimeCube self, object t_range, object y_range, object x_range)
@@ -14886,7 +14914,7 @@ cdef class LazySpaceTimeCube(ISpaceTimeCube):
         pyidx cache_y,
         pyidx cache_x,
         )
-    cpdef float get(LazySpaceTimeCube self, pyidx t, pyidx y, pyidx x) noexcept
+    cpdef float get(LazySpaceTimeCube self, pyidx t, pyidx y, pyidx x) # noexcept
     # def getTimeSeries(self, t_range, y, x)
     # def getSpatialPlane(self, t, y_range, x_range)
     # def getSubcube(self, t_range, y_range, x_range)
@@ -15440,6 +15468,8 @@ cdef TrackedCellsIterator tracked_cells_iterator(NarrowBandTracker tracked_cells
 # cdef bint is_frontier_cell(
 #     float[:,::1] phi_matrix,
 #     ISpaceTimeCube fuel_model_cube,
+#     pyidx rows,
+#     pyidx cols,
 #     pyidx t,
 #     pyidx y,
 #     pyidx x,
@@ -15623,6 +15653,8 @@ cdef TrackedCellsIterator tracked_cells_iterator(NarrowBandTracker tracked_cells
 #     set frontier_removals,
 #     float[:,::1] phi_matrix,
 #     ISpaceTimeCube fuel_model_cube,
+#     pyidx rows,
+#     pyidx cols,
 #     pyidx t,
 #     pyidx y,
 #     pyidx x,
@@ -15633,6 +15665,8 @@ cdef TrackedCellsIterator tracked_cells_iterator(NarrowBandTracker tracked_cells
 #     list[BurnedCellInfo] spot_ignited_cells,
 #     float[:,::1] phi_matrix,
 #     ISpaceTimeCube fuel_model_cube,
+#     pyidx rows,
+#     pyidx cols,
 #     pyidx t,
 #     )
 # cdef set apply_frontier_diff(set frontier_cells_old, set frontier_additions, set frontier_removals)
