Disabled boundschecking in SpaceTimeCube.get* functions

--- a/org/pyretechnics.org
+++ b/org/pyretechnics.org
@@ -352,7 +352,7 @@ polymorphism over these two child classes.
 @cy.cclass
 class ISpaceTimeCube:
     @cy.cfunc
-    # @cy.exceptval(check=False)
+    @cy.exceptval(check=False)
     def get(self, t: pyidx, y: pyidx, x: pyidx) -> cy.float:
         pass
 #+end_src
@@ -518,8 +518,7 @@ class SpaceTimeCube(ISpaceTimeCube):
 
 
     @cy.ccall
-    # @cy.exceptval(check=False)
-    @cy.boundscheck(True)
+    @cy.exceptval(check=False)
     def get(self, t: pyidx, y: pyidx, x: pyidx) -> cy.float:
         """
         Return the scalar value at index (t,y,x) by translating these cube coordinates
@@ -535,7 +534,6 @@ class SpaceTimeCube(ISpaceTimeCube):
 
 
     @cy.ccall
-    @cy.boundscheck(True)
     def getTimeSeries(self, t_range: tuple[pyidx, pyidx]|None, y: pyidx, x: pyidx) -> ndarray:
         """
         Return the 1D array given by the slice (t_range,y,x) by translating these cube
@@ -571,7 +569,6 @@ class SpaceTimeCube(ISpaceTimeCube):
 
 
     @cy.ccall
-    @cy.boundscheck(True)
     def getSpatialPlane(self,
                         t      : pyidx,
                         y_range: tuple[pyidx, pyidx]|None,
@@ -622,7 +619,6 @@ class SpaceTimeCube(ISpaceTimeCube):
 
 
     @cy.ccall
-    @cy.boundscheck(True)
     def getSubcube(self,
                    t_range: tuple[pyidx, pyidx]|None,
                    y_range: tuple[pyidx, pyidx]|None,
@@ -875,7 +871,7 @@ class LazySpaceTimeCube(ISpaceTimeCube):
 
 
     @cy.ccall
-    # @cy.exceptval(check=False)
+    @cy.exceptval(check=False)
     def get(self, t: pyidx, y: pyidx, x: pyidx) -> cy.float:
         """
         Return the scalar value at index (t,y,x) by translating these cube coordinates
@@ -14881,7 +14877,7 @@ cdef np.ndarray stretch_array(np.ndarray old_array, int new_length, float repeti
 cdef np.ndarray maybe_repeat_array(np.ndarray maybe_array, (pyidx, float) axis_repetitions)
 
 cdef class ISpaceTimeCube:
-    cdef float get(ISpaceTimeCube self, pyidx t, pyidx y, pyidx x) # noexcept
+    cdef float get(ISpaceTimeCube self, pyidx t, pyidx y, pyidx x) noexcept
 
 cdef class SpaceTimeCube(ISpaceTimeCube):
     cdef public int ndim
@@ -14893,7 +14889,7 @@ cdef class SpaceTimeCube(ISpaceTimeCube):
     cdef public float x_repetitions
     # NOTE: We use const (read-only MemoryView) so that Cython will accept read-only arrays, which is required for shared-memory parallelism.
     cdef public const float[:,:,::1] data
-    cpdef float get(SpaceTimeCube self, pyidx t, pyidx y, pyidx x) # noexcept
+    cpdef float get(SpaceTimeCube self, pyidx t, pyidx y, pyidx x) noexcept
     cpdef np.ndarray getTimeSeries(SpaceTimeCube self, object t_range, pyidx y, pyidx x)
     cpdef np.ndarray getSpatialPlane(SpaceTimeCube self, pyidx t, object y_range, object x_range)
     cpdef np.ndarray getSubcube(SpaceTimeCube self, object t_range, object y_range, object x_range)
@@ -14914,7 +14910,7 @@ cdef class LazySpaceTimeCube(ISpaceTimeCube):
         pyidx cache_y,
         pyidx cache_x,
         )
-    cpdef float get(LazySpaceTimeCube self, pyidx t, pyidx y, pyidx x) # noexcept
+    cpdef float get(LazySpaceTimeCube self, pyidx t, pyidx y, pyidx x) noexcept
     # def getTimeSeries(self, t_range, y, x)
     # def getSpatialPlane(self, t, y_range, x_range)
     # def getSubcube(self, t_range, y_range, x_range)
