Embedding simulation_time in SpreadState and preventing improper time travel or ignition of already burned cells

--- a/org/pyretechnics.org
+++ b/org/pyretechnics.org
@@ -9197,6 +9197,7 @@ class SpreadState:
     Stores the stateful data associated with a fire spread simulation.
     """
     cube_shape        : tuple[pyidx, pyidx, pyidx]
+    simulation_time   : cy.float        # minutes
     phi               : cy.float[:,::1] # 2D float array of values in [-1,1]
     phi_star          : cy.float[:,::1] # 2D float array of values in [-1,1]
     fire_type         : cy.uchar[:,::1] # 2D byte array (0-3)
@@ -9216,14 +9217,41 @@ class SpreadState:
         # Create the initial 2D arrays
         # NOTE: The phi matrix is padded by 2 cells on each side to avoid the cost of checking bounds.
         self.cube_shape         = cube_shape
+        self.simulation_time    = -1.0
         self.phi                = np.ones((grid_rows + 4, grid_cols + 4), dtype="float32")
         self.phi_star           = np.ones((grid_rows + 4, grid_cols + 4), dtype="float32")
         self.fire_type          = np.zeros(grid_shape, dtype="uint8")
         self.spread_rate        = np.zeros(grid_shape, dtype="float32")
         self.spread_direction   = np.zeros(grid_shape, dtype="float32")
+        # self.spread_direction   = np.full(grid_shape, np.nan, dtype="float32") ; FIXME: switch from 0 to np.nan
         self.fireline_intensity = np.zeros(grid_shape, dtype="float32")
         self.flame_length       = np.zeros(grid_shape, dtype="float32")
-        self.time_of_arrival    = np.full(grid_shape, -1.0, dtype="float32")
+        self.time_of_arrival    = np.full(grid_shape, np.nan, dtype="float32")
+
+
+    @cy.ccall
+    def set_start_time(self, start_time: cy.float) -> SpreadState:
+        # Ensure that simulation_time is only set once
+        if (self.simulation_time >= 0.0):
+            raise ValueError("The start_time can only be set once.")
+        # Ensure that start_time is defined and not negative
+        if start_time is None:
+            raise ValueError("The start_time cannot be None.")
+        if (start_time < 0.0):
+            raise ValueError("The start_time cannot be negative.")
+        # Set simulation_time
+        self.simulation_time = start_time
+        # Set time_of_arrival to start_time where phi < 0.0
+        rows: pyidx = self.cube_shape[1]
+        cols: pyidx = self.cube_shape[2]
+        y   : pyidx
+        x   : pyidx
+        for y in range(rows):
+            for x in range(cols):
+                if self.phi[2+y,2+x] < 0.0:
+                    self.time_of_arrival[y,x] = start_time
+        # Return the updated SpreadState object
+        return self
 
 
     @cy.ccall
@@ -9231,9 +9259,15 @@ class SpreadState:
         # Extract coords
         y: pyidx = ignited_cell[0]
         x: pyidx = ignited_cell[1]
+        # Verify that we aren't igniting already burned cells
+        if (self.phi[2+y,2+x] < 0.0):
+            raise ValueError(f"The cell ({y},{x}) is already ignited.")
         # Overwrite phi and phi_star state
         self.phi[2+y,2+x]      = -1.0
         self.phi_star[2+y,2+x] = -1.0
+        # Overwrite time_of_arrival state if simulation_time is set
+        if (self.simulation_time >= 0.0):
+            self.time_of_arrival[y,x] = self.simulation_time
         # Return the updated SpreadState object
         return self
 
@@ -9247,11 +9281,34 @@ class SpreadState:
         min_x: pyidx = lower_left_corner[1]
         max_y: pyidx = min_y + rows
         max_x: pyidx = min_x + cols
+        y    : pyidx
+        x    : pyidx
+        # Verify that we aren't igniting already burned cells
+        for y in range(rows):
+            for x in range(cols):
+                if ignition_matrix[y,x] < 0.0 and self.phi[2+min_y+y,2+min_x+x] < 0.0:
+                    raise ValueError(f"Some cells in the range [{2+min_y}:{2+max_y},{2+min_x}:{2+max_x}] are already ignited.")
         # Overwrite phi and phi_star state
-        self.phi[2+min_y:2+max_y,2+min_x:2+max_x]      = ignition_matrix
-        self.phi_star[2+min_y:2+max_y,2+min_x:2+max_x] = ignition_matrix
+        for y in range(rows):
+            for x in range(cols):
+                if ignition_matrix[y,x] < 0.0:
+                    self.phi[2+min_y+y,2+min_x+x]      = ignition_matrix[y,x]
+                    self.phi_star[2+min_y+y,2+min_x+x] = ignition_matrix[y,x]
+                    # Overwrite time_of_arrival state if simulation_time is set
+                    if self.simulation_time >= 0.0:
+                        self.time_of_arrival[min_y+y,min_x+x] = self.simulation_time
         # Return the updated SpreadState object
         return self
+
+
+    @cy.ccall
+    def get_cube_shape(self) -> tuple[pyidx, pyidx, pyidx]:
+        return self.cube_shape
+
+
+    @cy.ccall
+    def get_simulation_time(self) -> cy.float:
+        return self.simulation_time
 
 
     @cy.ccall
@@ -9312,7 +9369,8 @@ class SpreadState:
         # Create an empty SpreadState object
         new_spread_state: SpreadState = SpreadState.__new__(SpreadState, self.cube_shape)
         # Initialize its fields with copies of the base object's fields
-        new_spread_state.cube_shape         = self.cube_shape # tuples are immutable
+        new_spread_state.cube_shape         = self.cube_shape      # tuples are immutable
+        new_spread_state.simulation_time    = self.simulation_time # floats are immutable
         new_spread_state.phi                = np.copy(self.phi)
         new_spread_state.phi_star           = np.copy(self.phi_star)
         new_spread_state.fire_type          = np.copy(self.fire_type)
@@ -11035,6 +11093,9 @@ def spread_one_timestep(sim_state    : dict,
                                                                                         frontier_removals,
                                                                                         fb_opts.buffer_width)
 
+    # Update the spread_state's simulation_time
+    spread_state.simulation_time = stop_time
+
     # Return the updated world state
     # NOTE: We are intentionally swapping the tracked_cells_arrays
     return {
@@ -11139,7 +11200,7 @@ def check_start_and_stop_times(start_time   : cy.float,
 def spread_fire_with_phi_field(space_time_cubes      : dict[str, ISpaceTimeCube],
                                spread_state          : SpreadState,
                                cube_resolution       : tuple[cy.float, cy.float, cy.float],
-                               start_time            : cy.float,
+                               start_time            : float|None             = None,
                                max_duration          : float|None             = None,
                                max_cells_per_timestep: cy.float               = 0.4,
                                buffer_width          : pyidx                  = 3,
@@ -11175,7 +11236,7 @@ def spread_fire_with_phi_field(space_time_cubes      : dict[str, ISpaceTimeCube]
       - band_duration                 :: minutes
       - cell_height                   :: meters
       - cell_width                    :: meters
-    - start_time                   :: minutes (from the start of the space_time_cube's temporal origin)
+    - start_time                   :: minutes from the start of the space_time_cube's temporal origin (Optional)
     - max_duration                 :: minutes (Optional)
     - max_cells_per_timestep       :: max number of cells the fire front can travel in one timestep (Optional)
     - buffer_width                 :: Chebyshev distance from frontier cells to include in tracked cells (Optional)
@@ -11228,6 +11289,19 @@ def spread_fire_with_phi_field(space_time_cubes      : dict[str, ISpaceTimeCube]
                                      band_duration,
                                      cell_height,
                                      cell_width)
+
+    # Match start_time to spread_state.simulation_time
+    if start_time:
+        if (spread_state.simulation_time == -1.0):
+            spread_state = spread_state.set_start_time(start_time)
+        else:
+            if (start_time != spread_state.simulation_time):
+                raise ValueError("The start_time does not match the spread_state's simulation_time.")
+    else:
+        if (spread_state.simulation_time == -1.0):
+            raise ValueError("No start_time provided.")
+        else:
+            start_time = spread_state.simulation_time
 
     # Calculate the cube duration and max stop time
     cube_duration: cy.float = bands * band_duration
@@ -11399,6 +11473,9 @@ start_time = (24 * 60) + (10 * 60) + 30 # minutes
 # 8 hours
 max_duration = 8 * 60 # minutes
 
+# Embed the start time in the SpreadState object
+spread_state.set_start_time(start_time)
+
 #============================================================================================
 # Spread fire from the start time for the max duration
 #============================================================================================
@@ -11542,8 +11619,10 @@ def save_matrix_as_heatmap(matrix, colors, units, title, filename, vmin=None, vm
 
 
 def save_matrix_as_contours(matrix, title, filename, levels=None):
+    nan_masked_matrix = matrix.copy()
+    nan_masked_matrix[np.isnan(nan_masked_matrix)] = -1.0
     fig, ax = plt.subplots()
-    cs      = ax.contour(matrix, levels=levels)
+    cs      = ax.contour(nan_masked_matrix, levels=levels)
     ax.clabel(cs, inline=True, fontsize=10)
     ax.set_aspect('equal', 'box')
     ax.set_title(title)
@@ -11713,6 +11792,9 @@ start_time = (24 * 60) + (10 * 60) + 30 # minutes
 
 # 8 hours
 max_duration = 8 * 60 # minutes
+
+# Embed the start time in the SpreadState object
+spread_state.set_start_time(start_time)
 
 #============================================================================================
 # Specify the spotting parameters
@@ -11943,8 +12025,10 @@ def save_matrix_as_heatmap(matrix, colors, units, title, filename, vmin=None, vm
 
 
 def save_matrix_as_contours(matrix, title, filename, levels=None):
+    nan_masked_matrix = matrix.copy()
+    nan_masked_matrix[np.isnan(nan_masked_matrix)] = -1.0
     fig, ax = plt.subplots()
-    cs      = ax.contour(matrix, levels=levels)
+    cs      = ax.contour(nan_masked_matrix, levels=levels)
     ax.clabel(cs, inline=True, fontsize=10)
     ax.set_aspect('equal', 'box')
     ax.set_title(title)
@@ -12111,6 +12195,9 @@ start_time = (24 * 60) + (10 * 60) + 30 # minutes
 
 # 8 hours
 max_duration = 8 * 60 # minutes
+
+# Embed the start time in the SpreadState object
+spread_state.set_start_time(start_time)
 
 #============================================================================================
 # Spread fire from the start time for the max duration
@@ -12403,8 +12490,10 @@ def save_matrix_as_heatmap(matrix, colors, units, title, filename, vmin=None, vm
 
 
 def save_matrix_as_contours(matrix, title, filename, levels=None):
+    nan_masked_matrix = matrix.copy()
+    nan_masked_matrix[np.isnan(nan_masked_matrix)] = -1.0
     fig, ax = plt.subplots()
-    cs      = ax.contour(matrix, levels=levels)
+    cs      = ax.contour(nan_masked_matrix, levels=levels)
     ax.clabel(cs, inline=True, fontsize=10)
     ax.set_aspect('equal', 'box')
     ax.set_title(title)
@@ -15441,6 +15530,7 @@ cdef TrackedCellsIterator tracked_cells_iterator(NarrowBandTracker tracked_cells
 # cdef SpreadBehavior unburned_SpreadBehavior(vec_xy elevation_gradient, vec_xyz phi_gradient_xyz) noexcept
 # cdef class SpreadState:
 #     cdef (pyidx, pyidx, pyidx) cube_shape
+#     cdef float simulation_time
 #     cdef float[:,::1] phi
 #     cdef float[:,::1] phi_star
 #     cdef unsigned char[:,::1] fire_type
@@ -15449,12 +15539,15 @@ cdef TrackedCellsIterator tracked_cells_iterator(NarrowBandTracker tracked_cells
 #     cdef float[:,::1] fireline_intensity
 #     cdef float[:,::1] flame_length
 #     cdef float[:,::1] time_of_arrival
+#     cpdef SpreadState set_start_time(SpreadState self, float start_time)
 #     cpdef SpreadState ignite_cell(SpreadState self, coord_yx ignited_cell)
 #     cpdef SpreadState ignite_cells(
 #         SpreadState self,
 #         coord_yx lower_left_corner,
 #         float[:,::1] ignition_matrix,
 #     )
+#     cpdef (pyidx, pyidx, pyidx) get_cube_shape(SpreadState self)
+#     cpdef float get_simulation_time(SpreadState self)
 #     cpdef dict get_burned_matrices(SpreadState self, list layers=?)
 #     cpdef dict get_full_matrices(SpreadState self, list layers=?)
 #     cpdef SpreadState copy(SpreadState self)
@@ -15694,7 +15787,7 @@ cdef TrackedCellsIterator tracked_cells_iterator(NarrowBandTracker tracked_cells
 #     dict[str, ISpaceTimeCube] space_time_cubes,
 #     SpreadState spread_state,
 #     (float, float, float) cube_resolution,
-#     float start_time,
+#     float start_time=?,
 #     object max_duration=?,
 #     float max_cells_per_timestep=?,
 #     pyidx buffer_width=?,
